--- a/00-1_Welcome.html
+++ b/00-1_Welcome.html
@@ -118,8 +118,8 @@ ul.task-list li input[type="checkbox"] {
 <p>While traditional lecturing works for some topics, this course really requires active participation, as you are really learning a new language as well as problem solving techniques. In essence, success requires you to do the work, you need to practice the language and skills in many different contexts. Think of this as how you might teach someone to ride a bike: first, you might ask your friend to watch a YouTube video, and then even demo the process yourself. The next step would be running alongside the bicycle while holding as your friend develops a sense of balance. The last step would be to give the person a push and watch them ride away. We’ll take a similar approach this semester for every topic following the general weekly schedule below:</p>
 <table class="table">
 <colgroup>
-<col style="width: 20%">
-<col style="width: 79%">
+<col style="width: 27%">
+<col style="width: 72%">
 </colgroup>
 <thead>
 <tr class="header">
@@ -174,7 +174,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="grades" class="level3">
 <h3 class="anchored" data-anchor-id="grades">Grades</h3>
-<p>Course assessments throughout the semester include the following: Concept Checks = low-stake exercises (15%), Problem Sets (%), Project-based assessments (30%). Every week, the lowstake exercises will be due Monday before class and Problem Set is due on Thursday at midnight. Note we have a lenient late policy; however, I highly suggest wrapping up on time which will set you up for the following week.</p>
+<p>Course assessments throughout the semester include the following: Concept Checks = low-stake exercises (15%), Problem Sets (%), Project-based assessments (30%). Every week, the low stake exercises will be due Monday before class and Problem Set is due on Thursday at midnight. Note we have a lenient late policy; however, I highly suggest wrapping up on time which will set you up for the following week.</p>
 </section>
 <section id="accessibility-inclusivity" class="level3">
 <h3 class="anchored" data-anchor-id="accessibility-inclusivity">Accessibility &amp; Inclusivity</h3>
@@ -186,8 +186,8 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="course-management-and-cloud-computing" class="level3">
 <h3 class="anchored" data-anchor-id="course-management-and-cloud-computing">Course Management and Cloud Computing</h3>
-<p>We’ll use a combination of Canvas/Kritik (course management), Google drive (content), and an online version of R called Posit (cloud computing) throughout the course. We will use Posit cloud throughout the course this year. Posit is a cloud computing version of R/Rstudio that makes it easier for us to get everyone up and running. It also allows us to login to your project for an assignment and help troubleshoot your issues.</p>
-<p>Sign up for a free Posit account <strong>using your <span class="citation" data-cites="vt.edu">@vt.edu</span> email</strong> and join our class workspace here: https://posit.cloud/spaces/466263/join?access_code=t7_EYM675vTBtBWbCJdZy-GzLB4j6tl9CFB6ibq-</p>
+<p>We’ll use a combination of Canvas/Kritik (course management), Google drive (content), and an online version of R called Posit (cloud computing) throughout the course. We will use Posit cloud throughout the course this year. Posit is a cloud computing version of R/Rstudio that makes it easier for us to get everyone up and running. It also allows us to log in to your project for an assignment and help troubleshoot your issues.</p>
+<p>Sign up for a free Posit account <strong>using your <span class="citation" data-cites="vt.edu">@vt.edu</span> email</strong> and join our class workspace here: <a href="https://posit.cloud/spaces/466263/join?access_code=t7_EYM675vTBtBWbCJdZy-GzLB4j6tl9CFB6ibq-" class="uri">https://posit.cloud/spaces/466263/join?access_code=t7_EYM675vTBtBWbCJdZy-GzLB4j6tl9CFB6ibq-</a></p>
 </section>
 </section>
 
