--- a/00-2_Syllabus.html
+++ b/00-2_Syllabus.html
@@ -6,8 +6,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="author" content="Clay Wright">
 
-<title>syllabus</title>
+<title>Welcome to BSE3144</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -43,15 +44,36 @@ ul.task-list li input[type="checkbox"] {
 
 <main class="content" id="quarto-document-content">
 
+<header id="title-block-header" class="quarto-title-block default">
+<div class="quarto-title">
+<h1 class="title">Welcome to BSE3144</h1>
+</div>
 
+
+
+<div class="quarto-title-meta">
+
+    <div>
+    <div class="quarto-title-meta-heading">Author</div>
+    <div class="quarto-title-meta-contents">
+             <p>Clay Wright </p>
+          </div>
+  </div>
+    
+  
+    
+  </div>
+  
+
+</header>
 
 <section id="bse-3144-engineering-analysis-for-biological-systems-using-numerical-methods---spring-2023" class="level1">
 <h1>BSE 3144: Engineering Analysis for Biological Systems using Numerical Methods - Spring 2023</h1>
 <section id="course-logistics" class="level3">
 <h3 class="anchored" data-anchor-id="course-logistics">Course Logistics</h3>
-<p><strong>Course Meetings: </strong>MW 11:15–12:05 Derring Hall 1014</p>
-<p><strong>Modality: In-person, with potential for occasional Zoom meetings. </strong>All materials will be delivered in a synchronous format in the classroom and will be recorded via Zoom. Materials will be made available online as soon as possible after delivery. There will be group/team activities in every lecture/lab, so you are encouraged to attend in-person synchronous sessions if possible to gain the most from the course, but if you suspect you are sick, please stay home and join via zoom, or catch up later.</p>
-<p><strong>Public Health: If you are sick please mask in class or do not attend class and isolate yourself. I will gladly make all materials/assignments available to you. </strong>Public Health is a team sport. Let’s do our collective best to keep everyone safe and healthy. Who wants to get sick and miss a week of class and potentially have to make up assignments during a busy semester?</p>
+<p><strong>Course Meetings:</strong> MW 11:15–12:05 Derring Hall 1014</p>
+<p><strong>Modality: In-person, with potential for occasional Zoom meetings.</strong> All materials will be delivered in a synchronous format in the classroom and will be recorded via Zoom. Materials will be made available online as soon as possible after delivery. There will be group/team activities in every lecture/lab, so you are encouraged to attend in-person synchronous sessions if possible to gain the most from the course, but if you suspect you are sick, please stay home and join via zoom, or catch up later.</p>
+<p><strong>Public Health: If you are sick please mask in class or do not attend class and isolate yourself. I will gladly make all materials/assignments available to you.</strong> Public Health is a team sport. Let’s do our collective best to keep everyone safe and healthy. Who wants to get sick and miss a week of class and potentially have to make up assignments during a busy semester?</p>
 <p>Materials and in-class assignments will be available for review and completion in an asynchronous (outside-class) manner. We will do our best to extend generosity in an equitable way. We hope you will do the same. If you or your close contacts have tested positive for Covid-19 or influenza please do not hesitate to stay home and reach out to us for materials. I hope if we as a society have learned anything from this pandemic, it is that a little compassion can go a long way.</p>
 <p><strong>Course Website Link: <a href="https://canvas.vt.edu/courses/184696">https://canvas.vt.edu/courses/184696</a> </strong></p>
 <p><strong><a href="https://docs.google.com/spreadsheets/u/0/d/1SrTipmDhY4nloYDEanIAsKIIiOC3FSJXAuL-PaG921g/edit">Course Schedule Link</a> </strong></p>
@@ -139,7 +161,7 @@ Office/Advising/Tutoring Hours Link:
 </tbody></table>
 
 
-<p>_Email** **to schedule appointments outside these times. <span style="text-decoration:underline;">Please suggest times when you are available and reference your conflict with regular office hours in the request</span>._</p>
+<p><em>Email to schedule appointments outside these times. Please suggest times when you are available and reference your conflict with regular office hours in the request.</em></p>
 <p><strong>Email/Communication Protocol: </strong>Before emailing,** please consider whether your question would be more appropriate as a post on Canvas **(even a private post to instructors). We will strive to respond to all inquiries within 24 hours and would request you strive for the same. A courteous and professional tone (on your part and ours) greatly increases the likelihood of a positive result.</p>
 <p><strong>Course Description: </strong></p>
 <p>This course focuses on the process of solving engineering problems related to biological systems using numerical analysis including root finding, numerical integration, differentiation, interpolation and numerical solution of ordinary differential equations, error analysis and programming with engineering software.</p>
